fixed little alignment

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -102,7 +102,7 @@ footer {
 
 .footer_text {
     flex-direction: wrap;
-    margin-left: 8%;
+    /*margin-left: 8%;*/
     margin-right: 5%;
     font-family: 'Gilroy';
     font-weight: normal;
@@ -162,6 +162,7 @@ footer {
     display:flex;
     width:45vw;
     justify-content: space-between;
+    padding-left: 0%;
 }
 .otherLinks ul a{
     background-image:linear-gradient(0deg, #1fd1f9, #b621fe);
